--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuetify": "latest",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "vue-resource": "^1.3.4",
+    "body-parser":"^1.17.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
