--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
+    "vuex": "^2.3.1",
     "vuetify": "latest",
     "mysql": "^2.13.0",
     "vue-resource": "^1.3.4",
