--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "vuetify": "latest",
     "mysql": "^2.13.0",
     "vue-resource": "^1.3.4",
-    "body-parser":"^1.17.2"
+    "body-parser":"^1.17.2",
+    "mdi": "latest",
+    "sqlstring": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
